# test-social-media

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  app.sh  docker-compose.yaml  pyproject.toml
docker/: celery.sh
elastic/: es.py
locale/: en.json  ru.json
migrations/: env.py
migrations/versions/: 06b325a12c7d_added_comment_section.py  0aef916b45db_another_bullshit_logout.py  181a54280fae_added_image_field_to_user_table.py  1824ec2c884b_made_image_field_not_required.py  214fc5ac39ae_added_subscription_model.py  2a0202f5f56e_added_user_rel.py  360650e0afc0_added_reaction_table.py  3764e85fd1d4_added_created_and_updated_fiedls.py  49b08882142f_changed_desc_to_text.py  4b8d9d3c6dfd_added_verification_field_to_user_table.py  5f632c85770c_cdb.py  840b69263874_changed_datetime_to_date.py  976cc4cc3961_added_image_to_post.py  9d3b02cfe449_added_some_fields_to_user_table.py  a1d4a7319eb1_added_comment_response_table.py  bdeb0d129612_added_post_table.py  c304c38ff430_snap_back_i_am_fucked_up.py  c4dbb55a4af8_id_autoincrement.py  c8a78befe351_added_views_field_to_post_table.py  cfe350a4d53d_added_created_at_to_comment.py  d8c2dae14f9d_modified_post.py
social_media/: config.py  database.py  es_connector.py  main.py
social_media/ai/: recommendations.py
social_media/auth/: jwt.py  models.py  router.py  schemas.py
social_media/comment/: router.py  schemas.py
social_media/elastic/: client.py  search.py
social_media/helpers/: auth_user.py  posts.py  recommends.py  verification.py
(+9 files in other folders)
