[tool.poetry]
name = "social-media"
version = "0.1.0"
description = ""
authors = ["nurali0709 <imusk793@gmail.com>"]
readme = "README.md"
packages = [{include = "social_media"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
pyjwt = "^2.7.0"


[tool.poetry.group.test.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
