[tool.poetry]
name = "social-media"
version = "0.1.0"
description = ""
authors = ["nurali0709 <imusk793@gmail.com>"]
readme = "README.md"
packages = [{include = "social_media"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
pyjwt = "^2.7.0"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.18"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
bcrypt = "^4.0.1"
python-decouple = "^3.8"
celery = "^5.3.1"
flower = "^2.0.0"
redis = "^4.6.0"
python-multipart = "^0.0.6"
pillow = "^10.0.0"


[tool.poetry.group.test.dependencies]
pylint = "^2.17.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
